--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar">
 <head>
     <meta charset="UTF-8">
-    <title>Package Selection</title>
+    <title>اختيار الباقة</title>
     <style>
         /* Basic styling for the form */
         body {
@@ -13,12 +13,14 @@
             justify-content: center;
             align-items: center;
             margin: 0;
+            direction: rtl; /* Set text direction to right-to-left for Arabic */
         }
         .container {
             background-color: #fff;
             padding: 30px 40px;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            width: 400px;
         }
         h2 {
             text-align: center;
@@ -62,22 +64,26 @@
 </head>
 <body>
     <div class="container">
-        <h2>Select Your Package</h2>
+        <h2>اختر باقتك</h2>
         <form id="packageForm">
-            <label for="package">Choose a Package:</label>
+            <label for="package">اختر باقة:</label>
             <select id="package" name="package" required>
-                <option value="">--Select Package--</option>
-                <option value="Basic">Basic Package</option>
-                <option value="Standard">Standard Package</option>
-                <option value="Premium">Premium Package</option>
+                <option value="">--اختر باقة--</option>
+                <option value="20GB_1000">20 جيجا إنترنت + 1000 دقيقة/رسالة - 220 جنيه</option>
+                <option value="30GB_1500">30 جيجا إنترنت + 1500 دقيقة/رسالة - 280 جنيه</option>
+                <option value="35GB_1500">35 جيجا إنترنت + 1500 دقيقة/رسالة - 335 جنيه</option>
+                <option value="40GB_1500">40 جيجا إنترنت + 1500 دقيقة/رسالة - 360 جنيه</option>
+                <option value="50GB_2000">50 جيجا إنترنت + 2000 دقيقة/رسالة - 430 جنيه</option>
+                <option value="60GB_2000">60 جيجا إنترنت + 2000 دقيقة/رسالة - 500 جنيه</option>
+                <option value="70GB_2000">70 جيجا إنترنت + 2000 دقيقة/رسالة - 600 جنيه</option>
             </select>
 
-            <label for="mobile">Enter Your Mobile Number:</label>
-            <input type="tel" id="mobile" name="mobile" pattern="[0-9]{10,15}" placeholder="e.g., 1234567890" required>
+            <label for="mobile">أدخل رقم الموبايل الخاص بك:</label>
+            <input type="tel" id="mobile" name="mobile" pattern="[0-9]{10,15}" placeholder="مثال: 01234567890" required>
 
-            <button type="submit">Submit</button>
+            <button type="submit">إرسال</button>
         </form>
-        <p class="note">By submitting, you will be redirected to WhatsApp.</p>
+        <p class="note">بإرسال النموذج، سيتم تحويلك إلى واتساب.</p>
     </div>
 
     <script>
@@ -88,22 +94,35 @@
             const mobileNumber = document.getElementById('mobile').value.trim();
 
             if (!packageSelected) {
-                alert('Please select a package.');
+                alert('يرجى اختيار باقة.');
                 return;
             }
 
             // Validate mobile number (simple validation)
             const mobilePattern = /^[0-9]{10,15}$/;
             if (!mobilePattern.test(mobileNumber)) {
-                alert('Please enter a valid mobile number (10-15 digits).');
+                alert('يرجى إدخال رقم موبايل صالح (10-15 رقم).');
                 return;
             }
 
+            // Map package values to detailed descriptions
+            const packageDetails = {
+                "20GB_1000": "20 جيجا إنترنت + 1000 دقيقة/رسالة",
+                "30GB_1500": "30 جيجا إنترنت + 1500 دقيقة/رسالة",
+                "35GB_1500": "35 جيجا إنترنت + 1500 دقيقة/رسالة",
+                "40GB_1500": "40 جيجا إنترنت + 1500 دقيقة/رسالة",
+                "50GB_2000": "50 جيجا إنترنت + 2000 دقيقة/رسالة",
+                "60GB_2000": "60 جيجا إنترنت + 2000 دقيقة/رسالة",
+                "70GB_2000": "70 جيجا إنترنت + 2000 دقيقة/رسالة"
+            };
+
+            const selectedPackage = packageDetails[packageSelected] || "باقة غير محددة";
+
             // Construct the message
-            const message = `Package Selected: ${encodeURIComponent(packageSelected)}%0AMobile Number: ${encodeURIComponent(mobileNumber)}`;
+            const message = `باقتك المختارة: ${encodeURIComponent(selectedPackage)}%0Aرقم الموبايل: ${encodeURIComponent(mobileNumber)}`;
 
             // Replace 'YOUR_WHATSAPP_NUMBER' with your actual WhatsApp number in international format
-            const whatsappNumber = '+201023339149'; // e.g., '12345678901'
+            const whatsappNumber = '201023339149'; // Example: '201023339149'
 
             // Construct the WhatsApp URL
             const whatsappURL = `https://wa.me/${whatsappNumber}?text=${message}`;
