--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             align-items: center;
             margin: 0;
             direction: rtl; /* Set text direction to right-to-left for Arabic */
+            background-image: url("gold.jpg");
         }
         .container {
             background-color: #fff;
