--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             margin: 0;
             direction: rtl; /* Set text direction to right-to-left for Arabic */
             background-image: url("gold.jpg");
+            background-repeat: no-repeat;
         }
         .container {
             background-color: #fff;
