--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             direction: rtl; /* Set text direction to right-to-left for Arabic */
             background-image: url("gold.jpg");
             background-repeat: no-repeat;
+            background-size: cover;
         }
         .container {
             background-color: #fff;
