--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             align-items: center;
             margin: 0;
             direction: rtl; /* Set text direction to right-to-left for Arabic */
-            background-image: url("gold.jpg");
+            background-image: url("images.jpeg");
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center; /* Ensures the image is centered */
