--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             background-image: url("images.jpeg");
             background-repeat: no-repeat;
             background-size: cover;
-            background-position: center; /* Ensures the image is centered */
+           // background-position: center; /* Ensures the image is centered */
         }
         .container {
             background-color: #fff;
