--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="ar">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>اختيار الباقة</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Added Meta Viewport -->
+    <link rel="preload" href="images.jpeg" as="image">  <!-- Preload the background image -->
     <style>
-        /* Basic styling for the form */
         body {
             font-family: Arial, sans-serif;
             background-color: #f4f4f4;
@@ -14,26 +14,25 @@
             justify-content: center;
             align-items: center;
             margin: 0;
-            direction: rtl; /* Set text direction to right-to-left for Arabic */
+            direction: rtl;
             background-image: url("images.jpeg");
             background-repeat: no-repeat;
             background-size: cover;
-           /* background-position: center; */ /* Ensures the image is centered */
         }
         .container {
             background-color: #fff;
             padding: 30px 40px;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            width: 90%; /* Changed from fixed width to percentage */
-            max-width: 400px; /* Ensures it doesn't exceed 400px */
-            box-sizing: border-box; /* Includes padding in width */
+            width: 90%;
+            max-width: 400px;
+            box-sizing: border-box;
         }
         h2 {
             text-align: center;
             margin-bottom: 25px;
             color: #333;
-            font-size: 2em; /* Ensures readability */
+            font-size: 2em;
         }
         label {
             display: block;
@@ -54,16 +53,20 @@
             margin-top: 20px;
             padding: 12px;
             width: 100%;
-            background-color: #25D366; /* WhatsApp Green */
+            background-color: #25D366;
             border: none;
             color: #fff;
             font-size: 16px;
             border-radius: 4px;
             cursor: pointer;
-            transition: background-color 0.3s ease; /* Smooth transition */
+            transition: background-color 0.3s ease;
         }
         button:hover {
             background-color: #128C7E;
+        }
+        button:focus, select:focus, input:focus {
+            outline: 2px solid #25D366;
+            outline-offset: 2px;
         }
         .note {
             margin-top: 10px;
@@ -71,43 +74,43 @@
             color: #888;
             text-align: center;
         }
-
-        /* Media Queries for Devices with a Width of 768px or Less */
-        @media (max-width: 768px) {
-            body {
-                padding: 20px; /* Adds padding to prevent content from touching screen edges */
-            }
-
-            .container {
-                padding: 20px 25px; /* Reduces padding for smaller screens */
-            }
-
-            h2 {
-                font-size: 1.5em; /* Adjusts the heading size */
-            }
-
-            label, select, input, button {
-                font-size: 1em; /* Ensures text is readable on smaller devices */
-            }
-
-            .note {
-                font-size: 0.9em; /* Slightly smaller note text */
-            }
+        .error {
+            color: red;
         }
 
-        /* Media Queries for Devices with a Width of 480px or Less */
+        /* Responsive Design */
+        @media (max-width: 768px) {
+            body {
+                padding: 20px;
+            }
+            .container {
+                padding: 20px 25px;
+            }
+            h2 {
+                font-size: 1.5em;
+            }
+        }
         @media (max-width: 480px) {
             .container {
-                padding: 15px 20px; /* Further reduces padding */
+                padding: 15px 20px;
             }
-
             h2 {
-                font-size: 1.2em; /* Further adjusts heading size */
+                font-size: 1.2em;
             }
-
             button {
-                padding: 10px; /* Reduces button padding */
-                font-size: 0.9em; /* Adjusts button text size */
+                padding: 10px;
+                font-size: 0.9em;
+            }
+        }
+        @media (max-width: 360px) {
+            body {
+                padding: 10px;
+            }
+            .container {
+                padding: 10px 15px;
+            }
+            h2 {
+                font-size: 1em;
             }
         }
     </style>
@@ -125,10 +128,9 @@
                 <option value="40GB_1500">40 جيجا إنترنت + 1500 دقيقة/رسالة - 360 جنيه</option>
                 <option value="50GB_2000">50 جيجا إنترنت + 2000 دقيقة/رسالة - 430 جنيه</option>
                 <option value="60GB_2000">60 جيجا إنترنت + 2000 دقيقة/رسالة - 500 جنيه</option>
-                <option value="70GB_2000">70 جيجا إنترنت + 2000 دقيقة/رسالة - 600 جنيه</option>
             </select>
 
-            <label for="mobile">أدخل رقم الموبايل الخاص بك:</label>
+            <label for="mobile">رقم الموبايل:</label>
             <input 
                 type="tel" 
                 id="mobile" 
@@ -144,48 +146,41 @@
         <p class="note">بإرسال النموذج، سيتم تحويلك إلى واتساب.</p>
     </div>
 
-    <script>
-        document.getElementById('packageForm').addEventListener('submit', function(e) {
-            e.preventDefault(); // Prevent the default form submission
+    <script defer>
+        const form = document.getElementById('packageForm');
 
+        form.addEventListener('submit', function(e) {
+            e.preventDefault();
             const packageSelected = document.getElementById('package').value;
             const mobileNumber = document.getElementById('mobile').value.trim();
+            const mobilePattern = /^[0-9]{10,15}$/;
+
+            let errorMessage = '';
 
             if (!packageSelected) {
-                alert('يرجى اختيار باقة.');
-                return;
+                errorMessage = 'يرجى اختيار باقة.';
+            } else if (!mobilePattern.test(mobileNumber)) {
+                errorMessage = 'يرجى إدخال رقم موبايل صالح.';
             }
 
-            // Validate mobile number (simple validation)
-            const mobilePattern = /^[0-9]{10,15}$/;
-            if (!mobilePattern.test(mobileNumber)) {
-                alert('يرجى إدخال رقم موبايل صالح (10-15 رقم).');
+            const errorElement = document.querySelector('.note');
+            if (errorMessage) {
+                errorElement.innerText = errorMessage;
+                errorElement.classList.add('error');
                 return;
+            } else {
+                errorElement.innerText = 'بإرسال النموذج، سيتم تحويلك إلى واتساب.';
+                errorElement.classList.remove('error');
             }
 
-            // Map package values to detailed descriptions
             const packageDetails = {
-                "20GB_1000": "20 جيجا إنترنت + 1000 دقيقة/رسالة",
-                "30GB_1500": "30 جيجا إنترنت + 1500 دقيقة/رسالة",
-                "35GB_1500": "35 جيجا إنترنت + 1500 دقيقة/رسالة",
-                "40GB_1500": "40 جيجا إنترنت + 1500 دقيقة/رسالة",
-                "50GB_2000": "50 جيجا إنترنت + 2000 دقيقة/رسالة",
-                "60GB_2000": "60 جيجا إنترنت + 2000 دقيقة/رسالة",
-                "70GB_2000": "70 جيجا إنترنت + 2000 دقيقة/رسالة"
+                "20GB_1000": "20 جيجا إنترنت + 1000 دقيقة",
+                "30GB_1500": "30 جيجا إنترنت + 1500 دقيقة",
             };
 
-            const selectedPackage = packageDetails[packageSelected] || "باقة غير محددة";
-
-            // Construct the message
-            const message = `باقتك المختارة: ${encodeURIComponent(selectedPackage)}%0Aرقم الموبايل: ${encodeURIComponent(mobileNumber)}`;
-
-            // Replace 'YOUR_WHATSAPP_NUMBER' with your actual WhatsApp number in international format
-            const whatsappNumber = '201200825653'; // Ensure this is in the correct format
-
-            // Construct the WhatsApp URL
-            const whatsappURL = `https://wa.me/${whatsappNumber}?text=${message}`;
-
-            // Open WhatsApp in a new tab/window
+            const selectedPackage = packageDetails[packageSelected] || "غير محددة";
+            const message = `باقتك: ${selectedPackage}%0Aرقم: ${mobileNumber}`;
+            const whatsappURL = `https://wa.me/201200825653?text=${message}`;
             window.open(whatsappURL, '_blank');
         });
     </script>
