--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>اختيار الباقة</title>
-    <link rel="preload" href="images.jpeg" as="image">  <!-- Preload the background image -->
+    <link rel="preload" href="gold.jpeg" as="image">  <!-- Preload the background image -->
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -15,7 +15,7 @@
             align-items: center;
             margin: 0;
             direction: rtl;
-            background-image: url("images.jpeg");
+            background-image: url("gold.jpeg");
             background-repeat: no-repeat;
             background-size: cover;
         }
